Try to fix slide animation on IOS

--- a/src/components/chart/chart.css
+++ b/src/components/chart/chart.css
@@ -192,7 +192,7 @@ figure {
         width: 100%;
     }
     100% {
-        width: 0;
+        width: 0%;
     }
 }
 
